--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
   "dependencies": {
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.2.0",
+    "markdown-it": "^14.1.0",
+    "mongodb": "^7.0.0",
     "nuxt": "^4.2.1",
     "typescript": "^5.9.3",
+    "uuid": "^13.0.0",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "@types/markdown-it": "^14.1.2",
+    "@types/node": "^24.10.1"
   }
 }
